test/success/simple-expressions.dsk
let mut a: []float = [1.0]

a[0] = 2.0

echo(a[0])

