test/error/static-field-assign-type-mismatch.dsk
let S = struct
    let mut x: int = 0
    y: string
let s = S(y = "hello")
S.x = "hello"
